# nuro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20241027_0001_create_core_tables.py
backend/app/: db.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  timers.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  timer.py  user.py
backend/app/schemas/: auth.py  timer.py
backend/app/services/: timers.py
backend/app/utils/: redis.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_timers.py
frontend/: .eslintrc.cjs  .prettierrc  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: client.ts
frontend/app/components/: TimerDisplay.tsx
frontend/app/hooks/: useTimer.ts
requests/: admin.http  nuro.http
